Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63847

"QNetworkSession" is undefined on Integrity

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.9.3
    • 5.9.3
    • Network
    • None
    • Integrity (gcc-armv7) on Linux RHEL_7_2 (gcc-x86_64) - Packaging, Release, DisableTests, OpenGLES2, NoUseGoldLinker, AbortTestingOnFirstFailure
    • 3fd641c3141b49b334dcbdb1a25649525445b724

      https://codereview.qt-project.org/#/c/208472/
      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1508301182
      https://testresults.qt.io/coin/api/results/qt/qtbase/0b3ca1e7ba7fe3915127d6a8165d2821b536f8ed/LinuxRHEL_7_2x86_64INTEGRITYINTEGRITY_11_04armv7GCCqtci-linux-RHEL-7.2-x86_64-e1aea8Release_DisableTests_OpenGLES2_NoUseGoldLinker/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1508301390/buildlog.txt.gz

      cxintarm -bsp platform-cortex-a9 -os_dir /opt/ghs/int1144 -non_shared -c -bigswitch --signed_fields --no_commons --diag_suppress=1,82,228,236,381,611,961,997,1795,1974 --no_implicit_include --link_once_templates -non_shared --new_outside_of_constructor -DINTEGRITY -Ospeed -Olink -Omax --c++11 --thread_local_storage --exceptions -DQT_STATICPLUGIN -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_CONCURRENT_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I../../include -I../../include/QtConcurrent -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3 -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3/QtConcurrent -I../../include/QtCore/5.9.3 -I../../include/QtCore/5.9.3/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/integrity-armv7-imx6 -o .obj/qtconcurrentfilter.o qtconcurrentfilter.cpp
      cxintarm -bsp platform-cortex-a9 -os_dir /opt/ghs/int1144 -non_shared -c -bigswitch --signed_fields --no_commons --diag_suppress=1,82,228,236,381,611,961,997,1795,1974 --no_implicit_include --link_once_templates -non_shared --new_outside_of_constructor -DINTEGRITY -Ospeed -Olink -Omax --c++11 --thread_local_storage --exceptions -DQT_STATICPLUGIN -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_CONCURRENT_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I../../include -I../../include/QtConcurrent -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3 -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3/QtConcurrent -I../../include/QtCore/5.9.3 -I../../include/QtCore/5.9.3/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/integrity-armv7-imx6 -o .obj/qtconcurrentmap.o qtconcurrentmap.cpp
      cxintarm -bsp platform-cortex-a9 -os_dir /opt/ghs/int1144 -non_shared -c -bigswitch --signed_fields --no_commons --diag_suppress=1,82,228,236,381,611,961,997,1795,1974 --no_implicit_include --link_once_templates -non_shared --new_outside_of_constructor -DINTEGRITY -Ospeed -Olink -Omax --c++11 --thread_local_storage --exceptions -DQT_STATICPLUGIN -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_CONCURRENT_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I../../include -I../../include/QtConcurrent -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3 -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3/QtConcurrent -I../../include/QtCore/5.9.3 -I../../include/QtCore/5.9.3/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/integrity-armv7-imx6 -o .obj/qtconcurrentrun.o qtconcurrentrun.cpp
      cxintarm -bsp platform-cortex-a9 -os_dir /opt/ghs/int1144 -non_shared -c -bigswitch --signed_fields --no_commons --diag_suppress=1,82,228,236,381,611,961,997,1795,1974 --no_implicit_include --link_once_templates -non_shared --new_outside_of_constructor -DINTEGRITY -Ospeed -Olink -Omax --c++11 --thread_local_storage --exceptions -DQT_STATICPLUGIN -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_CONCURRENT_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I../../include -I../../include/QtConcurrent -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3 -I/home/qt/work/qt/qtbase/include/QtConcurrent/5.9.3/QtConcurrent -I../../include/QtCore/5.9.3 -I../../include/QtCore/5.9.3/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/integrity-armv7-imx6 -o .obj/qtconcurrentthreadengine.o qtconcurrentthreadengine.cpp
      "access/qnetworkreplyhttpimpl_p.h", line 163: error #20: identifier
                "QNetworkSession" is undefined
            bool startWaitForSession(QSharedPointer<QNetworkSession> &session);
                                                    ^
      
      cxintarm -bsp platform-cortex-a9 -os_dir /opt/ghs/int1144 -non_shared -c -bigswitch --signed_fields --no_commons --diag_suppress=1,82,228,236,381,611,961,997,1795,1974 --no_implicit_include --link_once_templates -non_shared --new_outside_of_constructor -DINTEGRITY -Ospeed -Olink -Omax --c++11 --thread_local_storage -DQT_STATICPLUGIN -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DHAVE_CONFIG_H -DHB_NO_UNICODE_FUNCS -DHB_DISABLE_DEPRECATED -DHB_NDEBUG -DHB_EXTERN= -DHAVE_ATEXIT -DHAVE_PTHREAD -DHAVE_SCHED_H -DHAVE_SCHED_YIELD -DQT_NO_VERSION_TAGGING -DHAVE_OT -DQT_NO_EXCEPTIONS -I. -Iinclude -I../../../include -I../../../include/QtCore -I../../../mkspecs/integrity-armv7-imx6 -o .obj/hb-ot-shape-normalize.o src/hb-ot-shape-normalize.cc
      "access/qnetworkreplyhttpimpl.cpp", line 1826: error #20: identifier
                "QNetworkSession" is undefined
        bool QNetworkReplyHttpImplPrivate::startWaitForSession(QSharedPointer<QNetworkSession> &session)
                                                                              ^
      
      make[2]: *** [.obj/qnetworkreplyhttpimpl.o] Error 1
      make[2]: Leaving directory `/home/qt/work/qt/qtbase/src/network'
      make[1]: *** [sub-network-make_first] Error 2
      make[1]: *** Waiting for unfinished jobs....
      

        For Gerrit Dashboard: QTBUG-63847
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes